<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    <EditText
        android:id="@+id/enter_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name_hint" />

    <EditText
        android:id="@+id/enter_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems ="10"
        android:hint = "@string/last_name_hint"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enter_username"
        android:hint="@string/username_hint2"
        />
    <EditText
        android:id="@+id/enter_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint2"/>
    <EditText
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password"
        android:hint="@string/confirm_password_hint"/>

    <EditText
        android:id="@+id/enter_email_address"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address_hint"/>
    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_label"/>



</LinearLayout>
